# tde-kmenu_classic_modern_search

./: README.md  build_step_by_step.md  create_deb.sh  install.sh  integrate.sh  patch_kickerSettings.sh
src/kicker/: CMakeLists.txt
src/kicker/kicker/: CMakeLists.txt
src/kicker/kicker/ui/: CMakeLists.txt  k_mnu.cpp  k_mnu.h  k_new_mnu.h  popupmenutitle.cpp  popupmenutitle.h  service_mnu.cpp  service_mnu.h
src/kicker/libkicker/: CMakeLists.txt  kickerSettings.kcfg
